# Generador-de-folios

./: README.md
.github/workflows/: publish.yml
Languages/JavaScript/: README.md  package.json
Languages/JavaScript/src/: index.js
Languages/JavaScript/tests/: test.js
Languages/Python/: README.md  pyproject.toml
Languages/Python/src/folio_generator/: __init__.py  generator.py
Languages/Python/tests/: test_generator.py
Languages/TypeScript/: README.md  package-lock.json  package.json  tsconfig.json
Languages/TypeScript/src/: index.ts
Languages/TypeScript/tests/: test.ts
Lenguajes/JavaScript/: Documentacion.md  GeneradorFolio.js  Prueba.js
Lenguajes/Python/: Documentacion.md  GeneradorFolio.py  Prueba.py
Lenguajes/TypeScript/: Documentacion.md  GeneradorFolio.ts  Prueba.ts
