[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "folio-generator"
version = "1.0.0"
description = "A robust library to generate sequential alphanumeric codes."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "AnderCMD", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AnderCMD/Generador-de-folios"
"Bug Tracker" = "https://github.com/AnderCMD/Generador-de-folios/issues"
